--- a/src/app/shared/components/chart/chart.component.html
+++ b/src/app/shared/components/chart/chart.component.html
@@ -3,11 +3,6 @@
 	[Highcharts]="Highcharts"
 	[(update)]="update"
 	[callbackFunction]="chartCallback"
-	[options]="chartOptions"
+	[options]="initialChartOptions"
 	class="chart"
-	[class.hide]="loading"
 ></highcharts-chart>
-
-<ng-container *ngIf="loading">
-	<mat-spinner class="spinner"></mat-spinner>
-</ng-container>
